--- a/doc/bib/biblio.bib
+++ b/doc/bib/biblio.bib
@@ -131,3 +131,15 @@ author = {Jesse Hughes and Bart Jacobs},
 	year={2017}, 
 	pages={1132–1152}
 }
+
+@article{chapman:2019, 
+	title={Quotienting the Delay Monad by Weak Bisimilarity}, 
+	volume={29}, 
+	DOI={10.1017/S0960129517000184}, 
+	number={1}, 
+	journal={Mathematical Structures in Computer Science}, 
+	publisher={Cambridge University Press}, 
+	author={James Chapman and Tarmo Uustalu and Niccolò Veltri}, 
+	year={2019}, 
+	pages={67–92}
+}
