--- a/doc/latex/Coind.tex
+++ b/doc/latex/Coind.tex
@@ -9,6 +9,14 @@
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
 \AgdaModule{Coind}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Size}\AgdaSpace{}%
+\AgdaKeyword{hiding}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaPostulate{∞}\AgdaSymbol{)}\<%
 \end{code}
 
 %<*delayforce>
@@ -117,3 +125,92 @@
 \AgdaFunction{inf}\AgdaSymbol{)}\<%
 \end{code}
 %</inf>
+
+%<*sizedconat>
+\begin{code}%
+\>[0]\AgdaKeyword{mutual}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaKeyword{data}\AgdaSpace{}%
+\AgdaDatatype{Conat}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{i}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPostulate{Size}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaInductiveConstructor{zero}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Conat}\AgdaSpace{}%
+\AgdaBound{i}\<%
+\\
+%
+\>[4]\AgdaInductiveConstructor{suc}%
+\>[9]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaRecord{Conat′}\AgdaSpace{}%
+\AgdaBound{i}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Conat}\AgdaSpace{}%
+\AgdaBound{i}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaKeyword{record}\AgdaSpace{}%
+\AgdaRecord{Conat′}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{i}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPostulate{Size}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaKeyword{coinductive}\<%
+\\
+%
+\>[4]\AgdaKeyword{field}\<%
+\\
+\>[4][@{}l@{\AgdaIndent{0}}]%
+\>[6]\AgdaField{force}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{j}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaOperator{\AgdaPostulate{Size<}}\AgdaSpace{}%
+\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Conat}\AgdaSpace{}%
+\AgdaBound{j}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{Conat′}\AgdaSpace{}%
+\AgdaKeyword{public}\<%
+\end{code}
+%</sizedconat>
+
+%<*sizedinf>
+\begin{code}%
+\>[0]\AgdaFunction{infty}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaRecord{Conat′}\AgdaSpace{}%
+\AgdaBound{i}\<%
+\\
+\>[0]\AgdaField{force}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{infty}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\})}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{j}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{infty}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{j}\AgdaSymbol{\})}\<%
+\end{code}
+%</sizedinf>
