--- a/doc/latex/agda.sty
+++ b/doc/latex/agda.sty
@@ -231,7 +231,7 @@
     \definecolor{AgdaPostulate}             {HTML}{0000CD}
     \definecolor{AgdaPrimitive}             {HTML}{0000CD}
     \definecolor{AgdaRecord}                {HTML}{0000CD}
-    \definecolor{AgdaArgument}              {HTML}{404040}
+    \definecolor{AgdaArgument}              {HTML}{B10499}
 
     % Other aspect colours.
     \definecolor{AgdaDottedPattern}     {HTML}{000000}
