modifico estructuras agregando isequivalence y arrando capitulo 4 (form de monoid)

--- a/doc/latex/Agda.tex
+++ b/doc/latex/Agda.tex
@@ -35,8 +35,8 @@
 \AgdaDatatype{Bool}\<%
 \\
 \>[0]\AgdaFunction{not}\AgdaSpace{}%
-\AgdaInductiveConstructor{true}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{true}%
+\>[10]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{false}\<%
 \\
 \>[0]\AgdaFunction{not}\AgdaSpace{}%
@@ -575,10 +575,10 @@
 %<*moduleNumbers>
 \begin{code}%
 \>[0]\AgdaKeyword{module}%
-\>[344I]\AgdaModule{Numbers}\AgdaSpace{}%
+\>[343I]\AgdaModule{Numbers}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \\
-\>[344I][@{}l@{\AgdaIndent{0}}]%
+\>[343I][@{}l@{\AgdaIndent{0}}]%
 \>[8]\AgdaKeyword{data}\AgdaSpace{}%
 \AgdaDatatype{Nat}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -666,10 +666,10 @@
 \begin{code}%
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{Numbers}%
-\>[384I]\AgdaKeyword{hiding}\AgdaSpace{}%
+\>[383I]\AgdaKeyword{hiding}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{suc₂}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[384I]%
+\>[.][@{}l@{}]\<[383I]%
 \>[13]\AgdaKeyword{renaming}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaDatatype{Nat}\AgdaSpace{}%
 \AgdaSymbol{to}\AgdaSpace{}%
@@ -866,11 +866,11 @@
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaKeyword{field}%
-\>[495I]\AgdaField{x}\AgdaSpace{}%
+\>[494I]\AgdaField{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{ℕ}\<%
 \\
-\>[.][@{}l@{}]\<[495I]%
+\>[.][@{}l@{}]\<[494I]%
 \>[10]\AgdaField{y}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{ℕ}\<%
@@ -916,11 +916,11 @@
 \\
 %
 \>[4]\AgdaKeyword{field}%
-\>[522I]\AgdaField{x}\AgdaSpace{}%
+\>[521I]\AgdaField{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{ℕ}\<%
 \\
-\>[.][@{}l@{}]\<[522I]%
+\>[.][@{}l@{}]\<[521I]%
 \>[10]\AgdaField{y}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{ℕ}\<%
@@ -1100,13 +1100,13 @@
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaBound{xs}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[634I]\AgdaBound{f}\AgdaSpace{}%
+\>[633I]\AgdaBound{f}\AgdaSpace{}%
 \AgdaBound{x}%
 \>[32]\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
 \AgdaSymbol{\textbackslash{}}\AgdaBound{y}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[634I]%
+\>[.][@{}l@{}]\<[633I]%
 \>[22]\AgdaFunction{mapM}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSpace{}%
 \AgdaBound{xs}\AgdaSpace{}%
@@ -1124,7 +1124,7 @@
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{mapM'}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[647I]\AgdaSymbol{\{}\AgdaBound{M}\AgdaSpace{}%
+\>[646I]\AgdaSymbol{\{}\AgdaBound{M}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -1138,7 +1138,7 @@
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\<%
 \\
-\>[.][@{}l@{}]\<[647I]%
+\>[.][@{}l@{}]\<[646I]%
 \>[8]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
