--- a/doc/main.tex
+++ b/doc/main.tex
@@ -61,7 +61,8 @@
 \include{tex/delay}
 
 \part{Formalización de Mónadas Concurrentes}\label{part:mc}
- 
+
+\include{tex/form} 
 
 \bookmarksetup{startatroot}
 
