--- a/doc/tex/monconc.tex
+++ b/doc/tex/monconc.tex
@@ -129,9 +129,9 @@ Sean $\mathit{F}, \mathit{G} : \mathscr{C} \rightarrow \mathscr{D}$ dos funtores
 \end{equation*}
 \end{definition}
 
-Para cerrar la sección, se introducirá la noción de monoide. Los monoides son un tipo de estructura algebraica abstracta introducida por primera vez por Arthur Cayley \cite{}.
+Para cerrar la sección, se introducirá la noción de monoide, Los monoides son un tipo de estructura algebraica abstracta introducida por primera vez por Arthur Cayley.
 
-\begin{definition}[Monoide]
+\begin{definition}[Monoide]\label{def:monoid}
 Un \textbf{monoide} es un conjunto $M$ dotado de una operación asociativa $M \times M \rightarrow M$, $(m,n) \rightarrow mn$ tal que existe un elemento neutro:
 \begin{equation*}
 \exists e \in M, \forall m \in M, (em = me = m).
